# countpp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
apps/data_analyzer_web/: app.py  pyproject.toml
apps/recorder_android/: README.md
apps/recorder_web/: README.md
apps/workbench_web/: README.md  index.html  inspector_panels.jsx  package-lock.json  package.json  styles.css  timeline_workspace.jsx  workbench.jsx  workbench_layout.jsx  workbench_utils.js
apps/workbench_web/src/: main.jsx
data/derived/: README.md
data/examples/: accelerometer_fixture.csv  linear_acceleration_example.csv
docs/: architecture.md  data_analyzer_app.md  data_model.md  extractor_contract.md  roadmap.md  workbench_interactions.md  workbench_web.md
services/analysis_engine/: pyproject.toml
services/analysis_engine/src/countpp_analysis/: __init__.py  accelerometer.py  extraction.py
services/analysis_engine/tests/: test_accelerometer.py  test_extraction.py
services/data_api/: pyproject.toml
services/data_api/src/countpp_data_api/: app.py
services/extraction_worker/: pyproject.toml
services/extraction_worker/src/countpp_extraction_worker/: cli.py
services/label_studio_bridge/: pyproject.toml
services/label_studio_bridge/src/countpp_label_studio_bridge/: __init__.py  annotations.py  config.py  predictions.py  tasks.py
services/sync_service/: README.md
tests/: test_workbench_pipeline.py
