[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "countpp-label-studio-bridge"
version = "0.1.0"
description = "Label Studio task, config, prediction, and annotation conversion for countpp"
requires-python = ">=3.10"
dependencies = [
  "countpp-schemas>=0.1.0",
]
